--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
     "clsx": "^2.1.1",
-    "next": "15.0.2",
+    "next": "^15.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
